<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="summit.org.summitcalculator.TipCalculatorActivity">

    <EditText
        android:id="@+id/et_bill_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label_bill"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/et_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_tip"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/btn_calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculate" />

    <RelativeLayout
        android:paddingTop="@dimen/padding_large"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_label_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/label_size_medium"
            android:text="@string/label_tip"/>

        <TextView
            android:id="@+id/tv_result_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_vertical_margin"
            android:textSize="@dimen/label_size_medium"
            android:layout_toRightOf="@+id/tv_label_percent"
            tools:text="$5.00" />

        <TextView
            android:id="@+id/tv_label_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_label_tip"
            android:textSize="@dimen/label_size_medium"
            android:text="@string/label_total"/>

        <TextView
            android:id="@+id/tv_result_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_result_tip"
            android:layout_toRightOf="@+id/tv_label_percent"
            android:paddingLeft="@dimen/activity_vertical_margin"
            android:textSize="@dimen/label_size_medium"
            tools:text="$5.00" />
    </RelativeLayout>
</LinearLayout>
